# submarine-py

./: .gitignore  README.md  pyproject.toml  setup.py
doc/: client_doc.md  document.md  server_doc.md
players/: manual_player.rb  random_player.py
sample/: manual_player.py  random_player.py  server.py
source/: server.rb
src/submarine_py/: __init__.py  field.py  player_base.py  protocol.py  server.py  ship.py
tests/: test_client.py  test_field.py  test_player.py  test_ship.py
